[package]
name = "scheduler-example"
version = "0.1.0"
authors = ["Vagmi Mudumbai <vagmi.mudumbai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.6.1", features=["full"]}
anyhow = "1.0.41"
pin-project = "1.0.7"
pin-project-lite = "0.2.6"
